--- a/cloud-config-server.properties
+++ b/cloud-config-server.properties
@@ -1,1 +1,9 @@
 test=teswweewrewrewr
+
+mysqldb.datasource.url=jdbc\:mysql\://10.0.12.170\:3306/test?useUnicode\=true&characterEncoding\=utf-8
+
+mysqldb.datasource.username=csst胜多负少的范德萨发斯蒂芬
+
+mysqldb.datasource.password=csst问温柔的是否如果
+
+logging.level.org.springframework.web:DEBUG胜多负少的范德萨问问氛围日飞往斯蒂芬斯蒂芬我人人
